# Ozis_Qt

./: README.md
src/: CMakeLists.txt  api.cpp  api.h  apiapp.cpp  apiapp.h  assistant.cpp  assistant.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylabel.cpp  mylabel.h  order.cpp  order.h  photodescription.cpp  photodescription.h  productcontroller.cpp  productcontroller.h  productmodel.cpp  productmodel.h  productview.cpp  productview.h  qzipreader_p.h  qzipwriter_p.h  user.cpp  user.h
